[package]
name = "lazy-exclusive"
version = "1.0.2"
edition = "2024"
authors = ["elisey dudin <dudin.elisey@icloud.com>"]
description = "A global type like LazyLock/LazyStatic"
readme = "README.md"
repository = "https://github.com/eliseydudin/lazy-exclusive"
license = "MIT OR Apache-2.0"
keywords = ["lazy", "static"]
categories = ["memory-management"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-link = { version = "0.1.1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "0.2.171", optional = true }

[features]
use-locks = ["windows-link", "libc"]
default = ["use-locks"]
