[package]
name = "lazy-exclusive"
version = "1.0.3"
edition = "2024"
authors = ["elisey dudin <dudin.elisey@icloud.com>", "Maksim Bondarenkov"]
description = "A global type like LazyLock/LazyStatic"
readme = "README.md"
repository = "https://github.com/eliseydudin/lazy-exclusive"
license = "MIT OR Apache-2.0"
keywords = ["lazy", "static"]
categories = ["memory-management"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-link = { version = "0.1.1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "0.2.171", default-features = false, optional = true }

[features]
default = ["use-locks", "std"]
std = []
use-locks = ["windows-link", "libc"]
